<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catrobat Forum</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="gender_prompt">Choose a Gender</string>
    <string name="country_prompt">Choose a Country</string>
    <string name="country_language">ENGLISH</string>
    <string name="country_language_state">US</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="err_duplicate_entry">Nickname or Email already in use</string>

    <string-array name="gender">
        <item>male</item>
        <item>female</item>
    </string-array>


    <string name="err_missing_nickname">Please enter Nickname</string>
    <string name="err_missing_password">Please enter Password</string>
    <string name="err_missing_passwordconfirm">Please enter Password</string>
    <string name="err_missing_gender">Please choose Gender</string>
    <string name="err_missing_country">Please enter Country</string>
    <string name="err_missing_email">Please enter Email</string>
    <string name="err_too_short_passwords">Password too short (min. 6 characters)</string>
    <string name="err_unequal_passwords">Repeat your Password</string>
    <string name="err_invalid_email">Your Email is invalid (example@ex.com)</string>
    <string name="registration_complete_title">Registration complete</string>
    <string name="registration_complete_message">Contragulation! Your registration was successful.</string>
    <string name="ok">OK</string>
    <string name="post_title">Posts</string>
    <string name="new_posts">Newest Posts</string>
    <string name="categories">Categories</string>
    <string name="register">Sign up</string>
    <string name="top_bar">Catroid Forum</string>
    <string name="login">Login</string>
    <string name="title_activity_show_posts">ShowPosts</string>
    <string name ="title_splash_screen">splash screen</string>
    <string name="title_activity_threads">ThreadsActivity</string>
    <string name="button_new_thread">New Thread</string>
    <string name="title_activity_post_form">PostFormActivity</string>
    <string name="button_post">Post Thread</string>
    <string name="hint_title">Enter a title</string>
    <string name="hint_content">Enter your post</string>
    <string name="button_new_post">Answer</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>