<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/etNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/nickname" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNickname"
        android:layout_below="@+id/etNickname"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordconfirm" />

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPasswordConfirm"
        android:layout_below="@+id/etPasswordConfirm"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/country" />

    <Spinner
        android:id="@+id/spGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCountry"
        android:layout_below="@+id/etCountry"
        android:entries="@array/gender"
        android:prompt="@string/gender_prompt" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spGender"
        android:layout_below="@+id/spGender"
        android:ems="10" 
        android:text=""
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:onClick="clickRegister"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tvRegisterError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignRight="@+id/etEmail"
        android:layout_below="@+id/btRegister"
        android:layout_marginTop="25dp"
        android:textColor="@color/red"
        android:textIsSelectable="true" />

</RelativeLayout>